--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.12",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.1.0",
+    "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
